# PasswordManager

./: CMakeLists.txt  Scope.txt  main.cpp
resource/: mainDB
